Dishes docs ready in yaml
